--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,6 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="navy">#2D3D4F</color>
+    <color name="navy_light">#496280</color>
+    <color name="disabled"> #777e85</color>
 </resources>
