--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,7 +1,8 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Base.Theme.TalesOfTheUnknown" parent="Theme.Material3.DayNight.NoActionBar">
+<!--    <style name="Base.Theme.TalesOfTheUnknown" parent="Theme.Material3.DayNight.NoActionBar">-->
+    <style name="Base.Theme.MyGoogleMaps" parent="Theme.Material3.DayNight">
         <!-- Customize your dark theme here. -->
-        <!-- <item name="colorPrimary">@color/my_dark_primary</item> -->
+         <item name="colorPrimary">@color/navy_light</item>
     </style>
 </resources>
