--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,9 +1,10 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Base.Theme.TalesOfTheUnknown" parent="Theme.Material3.DayNight.NoActionBar">
+<!--    <style name="Base.Theme.TalesOfTheUnknown" parent="Theme.Material3.DayNight.NoActionBar">-->
+    <style name="Base.Theme.MyGoogleMaps" parent="Theme.Material3.DayNight">
         <!-- Customize your light theme here. -->
-        <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+         <item name="colorPrimary">@color/navy</item>
     </style>
 
-    <style name="Theme.TalesOfTheUnknown" parent="Base.Theme.TalesOfTheUnknown" />
+    <style name="Theme.MyGoogleMaps" parent="Base.Theme.MyGoogleMaps" />
 </resources>
